# light-message

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  mise.toml  settings.gradle.kts
.agents/rules/: adrs.md  caveman.md  git-branch.md  initiatives.md
.agents/skills/: codespec.md
.github/workflows/: build.yml  lint.yml  test.yml
docs/adrs/: ADR-001-kotlin-reimplementation.md  ADR-002-okhttp-client.md  ADR-003-plist-codec.md  ADR-004-jce-crypto.md  ADR-005-unifiedpush-notifications.md  ADR-006-room-datastore.md  ADR-007-lp3keyboard.md  ADR-008-workmanager-sync.md  TEMPLATE.md  index.md
docs/initiatives/: STRUCTURE.md
docs/initiatives/v1/: design.md  index.md  proposal.md  rustpush.md
docs/initiatives/v1/codespec/: index.md  milestone-2.md  milestone-3.md  milestone-4.md  milestone-5.md  milestone-6.md
docs/schemas/: IPCMessage.json  attachmentRef.json  encryptedEnvelope.json  entityModel.json  iMessagePayload.json
docs/specs/: apns-unifiedpush.asyncapi.yaml  mac-relay-activation.openapi.yaml
native-service/: Cargo.toml
native-service/src/: main.rs  protocol.rs  socket.rs
tool/: build.gradle.kts  proguard-rules.pro
tool/src/androidTest/java/com/lightphone/imessage/: PushDeliveryTest.kt
tool/src/main/: AndroidManifest.xml
tool/src/main/java/com/lightphone/imessage/: MainActivity.kt
tool/src/main/res/values/: strings.xml  themes.xml
tool/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
wrapper/: gradle-wrapper.properties
(+68 files in other folders)
